# mintarex-python

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
examples/: account.py  crypto.py  rfq.py  streams.py  webhooks.py
src/mintarex/: __init__.py  client.py  errors.py  mintarex.py  signing.py  streams.py  types.py  validate.py  webhooks.py
src/mintarex/resources/: account.py  crypto.py  public.py  rfq.py  trades.py  webhooks.py
tests/: test_client.py  test_signing.py  test_streams.py  test_validate.py  test_webhooks.py
