[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mintarex"
version = "0.0.3"
description = "Official Python SDK for the Mintarex Corporate OTC API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mintarex", email = "dev@mintarex.com" },
]
keywords = ["mintarex", "otc", "crypto", "trading", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://developers.mintarex.com"
Documentation = "https://developers.mintarex.com"
Repository = "https://github.com/mintarex/mintarex-python"
Issues = "https://github.com/mintarex/mintarex-python/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.11",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mintarex"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mintarex",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "S101",   # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S311"]
"examples/**" = ["S106", "T201"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
packages = ["mintarex"]
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
filterwarnings = ["error"]
